--- a/src/components/AddNote/AddNote.css
+++ b/src/components/AddNote/AddNote.css
@@ -1,16 +1,25 @@
+/* AddNote.css */
+
+html,
+body {
+  height: 100%; /* Ensures the body takes the full height */
+  margin: 0;
+}
+
 .add-note-container {
-  max-width: 800px;
-  margin: 0 auto;
+  height: 100vh; /* Full viewport height */
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Centers content vertically */
+  /* align-items: center; Centers content horizontally */
+  background: #f0f0f0; /* Light background color */
   padding: 20px;
-  background: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
 
 .add-note-title {
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 32px;
+  margin-bottom: 10px;
   color: #333;
 }
 
@@ -18,14 +27,33 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  height: 100%;
+  width: 100%;
+}
+
+.note-title-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.note-title-input::placeholder {
+  color: #aaa;
 }
 
 .text-editor {
-  height: 200px;
+  flex-grow: 1;
+  height: 300px; /* Adjust this if needed */
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 8px;
 }
 
 .btn-save {
-  align-self: flex-end;
   background-color: #4285f4;
   color: white;
   border: none;
@@ -34,6 +62,9 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  align-self: flex-end;
+
+  margin-top: 2.5%;
 }
 
 .btn-save:hover {
